# perception-fusion

./: .gitignore  .gitmodules  README.md  build_bridge_package.sh  build_librealsense.sh  build_ros1_all.sh  build_ros1_bridge.sh  build_ros2_all.sh  build_ros2_camera.sh  build_ros2_camera_jetson_orin.sh  build_ros2_pcd.sh  build_ros2_ros1_bridge.sh  clean_ros2_ws.sh  cyclonedds.xml  disable_wiregaurd_vpn.sh  environment_ros2.sh  environment_ros2_ros1_bridge.sh  environment_ros_humble_ros1_bridge.sh  setup_unicast.sh  setup_wiregaurd_vpn.sh
PerceptionFusion/: PerceptionFusion.py  dataloader.py  test_projection.py  utils.py
config/: bridge_1to2_params.yaml
dataset-gen/: calibrated_sensor.py
docs/: IPC.md  buoy-navigation-demo.md  camera-lidar-radar-projection.md  localization-ros2.md  pixhawk-mavros-ros1.md  plot-mavros-trajectory.md  pointcloud-processing.md  pointcloud-to-image.md  realsense2-camera-ros1.md  realsense2-camera-ros2.md  record-ros2-bag.md  ros-humble-ros1-bridge-example.md  ros2-ros1-bridge-example.md  velodyne-lidar-ros1.md  velodyne-lidar-ros2.md  visualize_nuscene.md
perception-fusion-dataset-gen/: calibrated_sensor.py
ros2_ws/src/localization2/: package.xml  setup.cfg  setup.py
ros2_ws/src/localization2/launch/: localization_gps_imu.launch.py
ros2_ws/src/localization2/localization2/: localization_gps_imu.py
ros2bag/: play_bag_all.sh  play_bag_images.sh  record_all_sensor.sh  record_all_sensor_sync.sh  record_images.sh
rosbag/: play_images.sh  record_all_images.sh  record_all_sensors.sh  record_images.sh  record_imu.sh  record_radar.sh  (+2 more)
(+197 files in other folders)
